[gd_scene load_steps=22 format=3 uid="uid://dov471sd5rue"]

[ext_resource type="Script" uid="uid://dcwrcf1ra2agv" path="res://battlesim/tower/tower.gd" id="1_5bbri"]
[ext_resource type="Resource" uid="uid://dx5623hpbda55" path="res://resources/projectiles/cannon_ball_projectile.tres" id="2_ecpqv"]
[ext_resource type="Texture2D" uid="uid://b73a0f3pmfmv" path="res://assets/art/map/friendly_tower.png" id="2_p4cgg"]
[ext_resource type="Script" uid="uid://c6f7dnvq8j5kj" path="res://battlesim/components/stats_component.gd" id="2_yktpk"]
[ext_resource type="Script" uid="uid://flyucgyi5hqr" path="res://battlesim/components/hurt_box_component.gd" id="3_44xvj"]
[ext_resource type="Script" uid="uid://mmtv0do5afbo" path="res://battlesim/components/hitbox_component.gd" id="4_653by"]
[ext_resource type="Script" uid="uid://dtmc1wbmqe5xw" path="res://battlesim/components/clickable_component.gd" id="4_dw66j"]
[ext_resource type="Script" uid="uid://cacvyynls6cp7" path="res://battlesim/components/attack_component.gd" id="7_artcp"]
[ext_resource type="Script" uid="uid://ck22qqxoil2yx" path="res://battlesim/components/damage_numbers_component.gd" id="8_d6oqv"]
[ext_resource type="Script" uid="uid://der7ik78fyu1g" path="res://battlesim/components/death_component.gd" id="9_lggq0"]
[ext_resource type="Script" uid="uid://dy0e6gnpv5mpu" path="res://battlesim/components/flash_component.gd" id="10_e8kic"]
[ext_resource type="Script" uid="uid://d35qdixsl3u8o" path="res://battlesim/components/juice_component.gd" id="10_xaul0"]
[ext_resource type="Script" uid="uid://c67gg7l62t4bv" path="res://battlesim/components/state_machine_component.gd" id="11_iwdll"]
[ext_resource type="Script" uid="uid://dh6daigbywbxx" path="res://battlesim/states/structure_state.gd" id="12_b5xah"]
[ext_resource type="PackedScene" uid="uid://cottssx1s1fc1" path="res://battlesim/components/attack_progress_bar_component.tscn" id="12_rps3j"]
[ext_resource type="Script" uid="uid://bb0m8seuy17fi" path="res://battlesim/components/health_bar_component.gd" id="13_g6xpu"]
[ext_resource type="Script" uid="uid://25ons4ulbe54" path="res://battlesim/components/new_game_component.gd" id="13_hccly"]
[ext_resource type="Script" uid="uid://emoyu5rtunbx" path="res://battlesim/components/outline_component.gd" id="17_a0euh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_80hab"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6ve4v"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6x1u6"]
radius = 130.0

[node name="Tower" type="StaticBody2D"]
script = ExtResource("1_5bbri")
actor_projectile = ExtResource("2_ecpqv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_80hab")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_p4cgg")

[node name="ClickableComponent" type="Button" parent="Sprite2D" node_paths=PackedStringArray("actor")]
unique_name_in_owner = true
offset_left = -271.5
offset_top = -446.0
offset_right = -263.5
offset_bottom = -438.0
flat = true
script = ExtResource("4_dw66j")
actor = NodePath("../..")

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("actor", "stats_component", "state_machine_component")]
collision_layer = 0
collision_mask = 0
script = ExtResource("3_44xvj")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
state_machine_component = NodePath("../StateMachineComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_6ve4v")
debug_color = Color(0.952941, 0, 0, 0.419608)

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("4_653by")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_6x1u6")

[node name="StatsComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_yktpk")
actor = NodePath("..")
damage = 150.0
att_range = 100
move_speed = 0.0
health = 3000.0

[node name="AttackComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "hitbox_component", "stats_component")]
script = ExtResource("7_artcp")
actor = NodePath("..")
hitbox_component = NodePath("../HitboxComponent")
stats_component = NodePath("../StatsComponent")

[node name="DamageNumbersComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "hurtbox_Component")]
script = ExtResource("8_d6oqv")
actor = NodePath("..")
hurtbox_Component = NodePath("../HurtboxComponent")

[node name="DeathComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "hurtbox_component")]
script = ExtResource("9_lggq0")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="OutlineComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("17_a0euh")
sprite = NodePath("../Sprite2D")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("hurtbox_component", "sprite")]
script = ExtResource("10_e8kic")
hurtbox_component = NodePath("../HurtboxComponent")
sprite = NodePath("../Sprite2D")

[node name="JuiceComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor", "attack_component", "death_component")]
script = ExtResource("10_xaul0")
actor = NodePath("..")
attack_component = NodePath("../AttackComponent")
death_component = NodePath("../DeathComponent")

[node name="HealthBarComponent" type="ProgressBar" parent="." node_paths=PackedStringArray("stats_component")]
offset_right = 4.0
offset_bottom = 22.0
script = ExtResource("13_g6xpu")
stats_component = NodePath("../StatsComponent")

[node name="AttackProgressBarComponent" parent="." node_paths=PackedStringArray("attack_component", "hitbox_component") instance=ExtResource("12_rps3j")]
offset_left = 50.0
offset_top = -70.0
offset_right = 306.0
offset_bottom = 186.0
attack_component = NodePath("../AttackComponent")
hitbox_component = NodePath("../HitboxComponent")

[node name="StateMachineComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "initial_state", "health_bar_component")]
script = ExtResource("11_iwdll")
actor = NodePath("..")
initial_state = NodePath("StructureState")
health_bar_component = NodePath("../HealthBarComponent")

[node name="StructureState" type="Node" parent="StateMachineComponent" node_paths=PackedStringArray("actor", "stats_component", "attack_component", "hitbox_component")]
script = ExtResource("12_b5xah")
actor = NodePath("../..")
stats_component = NodePath("../../StatsComponent")
attack_component = NodePath("../../AttackComponent")
hitbox_component = NodePath("../../HitboxComponent")

[node name="NewGameComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("13_hccly")
actor = NodePath("..")
